fix: adjust height for heros on tablet responsiveness

--- a/sass/themes/_theme.scss
+++ b/sass/themes/_theme.scss
@@ -95,13 +95,13 @@
 
 @media screen and (min-width: 700px) and (max-width: 1200px) {
     .hero-container, .hero-title{
-        height: 45vh;
+        height: 65vh;
     }
 
     .hero-container{
         .hero-wrapper{
             img{
-                height: 55vh;
+                height: 70vh;
                 top: -30px;
                 object-position: top;
             }
