--- a/style.css
+++ b/style.css
@@ -1044,9 +1044,9 @@ footer {
 
 @media screen and (min-width: 700px) and (max-width: 1200px) {
   .hero-container, .hero-title {
-    height: 45vh; }
+    height: 65vh; }
   .hero-container .hero-wrapper img {
-    height: 55vh;
+    height: 70vh;
     top: -30px;
     -o-object-position: top;
        object-position: top; } }
